--- a/.env
+++ b/.env
@@ -120,6 +120,9 @@ TWITTER_ACTIVE=false
 #TWITTER_CLIENT_ID=
 #TWITTER_CLIENT_SECRET=
 #TWITTER_REDIRECT=${APP_URL}/login/twitter/callback
-GOOGLE_RECAPTCHA_KEY=6Lc7PrcdAAAAAKdIHTsfUiZWsN3hcVcuMnKnSfnG
+# GOOGLE_RECAPTCHA_KEY=6Lc7PrcdAAAAAKdIHTsfUiZWsN3hcVcuMnKnSfnG
+GOOGLE_RECAPTCHA_KEY=6Lfzui8gAAAAAJTDI1XNeawReIYuleX4f21y5HQI
+GOOGLE_RECAPTCHA_SECRET=6Lfzui8gAAAAAExCjFZijckWz8RsogXelC0e3qAf
+#GOOGLE_RECAPTCHA_KEY=6Lc1Za4ZAAAAAAQkQqPHa6ZeBgZakZoMoCj8g6xu
 
 
